--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+// 以下3行、bootstrap導入時に追記
+@import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
