--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark mb-5 p-3" style="background-color: #FFFFFF; background-image: linear-gradient(-90deg, rgba(255, 204, 153, 0.5) 50%, transparent 50%),linear-gradient(rgba(153, 204, 204, 0.5) 50%, transparent 50%); background-size: 20px 20px;">
-        <div class="navbar-brand" style="color: #000000;">ロゴ</div>
+        <a class="navbar-brand" href="/" style="color: #000000;">ロゴ</a>
           <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
               <% if user_signed_in? %>
+                <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to '新規投稿', new_post_path, class: "", style: "text-decoration: none; color: black ;" %></li>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "", style: "text-decoration: none; color: black ;" %></li>
               <% else %>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 90px; text-align:center;"><%= link_to '新規登録', new_user_registration_path, class: "", style: "text-decoration: none; color: black ;" %></li>
