--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
           <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
               <% if user_signed_in? %>
+                <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'マイページ', user_path(current_user.id), class: "", style: "text-decoration: none; color: black ;" %></li>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to '新規投稿', new_post_path, class: "", style: "text-decoration: none; color: black ;" %></li>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "", style: "text-decoration: none; color: black ;" %></li>
               <% else %>
