--- a/app/views/posts/narrowing.html.erb
+++ b/app/views/posts/narrowing.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 <% end %>
 
-<h2>投稿一覧</h2>
+<h2><%= @post_tag.post_tag_name %>タグの投稿一覧</h2>
 <% @posts.each do |post| %>
   <div>
     <%= link_to post_path(post.id) do %>
