--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,5 +19,6 @@
 <p>ユーザーネーム：<%= @post.user.name %></p>
 <p>投稿日時：<%= @post.created_at.to_s(:datetime_jp) %></p>
 <% if @post.user == current_user %>
+  <%= link_to "投稿を編集する", edit_post_path(@post) %>
   <%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
 <% end %>
