--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,13 +1,13 @@
 <h1>投稿編集フォーム</h1>
 <%= form_with model: @post, local:true do |f| %>
   <h4>タイトル</h4>
-  <%= f.text_field :post_title %>
+  <%= f.text_field :title %>
   <h4>画像</h4>
-  <%= f.attachment_field :post_image %>
+  <%= f.attachment_field :image %>
   <h4>説明</h4>
-  <%= f.text_area :post_body %>
+  <%= f.text_area :body %>
   <h4>タグ付け</h4>
   <p>タグの間にスペースを入力することで複数のタグを付けることができます。</p>
-  <%= f.text_field :post_tag_name, value: @post_tags %>
+  <%= f.text_field :names, value: @post_tags %>
   <%= f.submit '変更を保存する' %>
 <% end %>
