--- a/app/views/posts/narrowing.html.erb
+++ b/app/views/posts/narrowing.html.erb
@@ -5,21 +5,21 @@
     <ul>
       <li>
         <%= link_to post_tag_posts_path(post_tag_id: post_tag_list.id) do %>
-          <%= post_tag_list.post_tag_name %><%= post_tag_list.posts.count %>
+          <%= post_tag_list.name %><%= post_tag_list.posts.count %>
         <% end %>
       </li>
     </ul>
   <% end %>
 <% end %>
 
-<h2><%= @post_tag.post_tag_name %>タグの投稿一覧</h2>
+<h2><%= @post_tag.name %>タグの投稿一覧</h2>
 <% @posts.each do |post| %>
   <div>
     <%= link_to post_path(post.id) do %>
-      <%= attachment_image_tag post, :post_image, fallback: "no_image.jpg", size: "180x130" %>
+      <%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "180x130" %>
     <% end %>
-    <p>タイトル：<%= post.post_title %></p>
-    <p>説明：<%= post.post_body %></p>
+    <p>タイトル：<%= post.title %></p>
+    <p>説明：<%= post.body %></p>
     <p>ユーザーネーム：<%= post.user.name %></p>
   </div>
 <% end %>
