--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,14 @@
-<h2>投稿</h2>
-<%= attachment_image_tag @post, :post_image, fallback: "no_image.jpg", size: "200x200" %>
-<p>タイトル：<%= @post.post_title %></p>
-<p>説明：<%= @post.post_body %></p>
+<h2>投稿詳細</h2>
+<%= attachment_image_tag @post, :image, fallback: "no_image.jpg", size: "200x200" %>
+<p>タイトル：<%= @post.title %></p>
+<p>説明：<%= @post.body %></p>
 <% if @post_tags.present? %> <!--タグ付けの有無を判定して表示を切り替える-->
   <p>タグ</p>
   <% @post_tags.each do |post_tag| %>
     <ul>
       <li>
         <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
-          <%= post_tag.post_tag_name %><%= post_tag.posts.count %>
+          <%= post_tag.name %><%= post_tag.posts.count %>
         <% end %>
       </li>
     </ul>
