--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -2,11 +2,15 @@
 <table>
   <% @parts.each do |part| %>
   <tr>
-    <td><%= part.name%> </td>
-    <td><%= part.genre %></td>
-    <td><%= part.spec %></td>
-    <td><%= part.manufacturer %></td>
-    <td><%= part.price %></td>
+    <td><%= part.name%></td>
+    <td>
+      <% part.part_tags.each do |part_tag| %>
+      <span>
+        #<%= part_tag.name %>
+      </span>
+      <% end %>
+    </td>
+    <td>¥<%= part.price.to_s(:delimited) %></td>
     <td><%= image_tag part.image, size: "100x100", :alt => "パーツ画像" %></td>
   </tr>
   <% end %>
