--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,35 @@
-<h2>新規ユーザー登録　</h2>
-
-<%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <p>ユーザー名<br><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ニックネーム" %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 offset-md-1">
+      <h2>新規ユーザー登録</h2>
+    </div>
   </div>
+  <div class="row">
+    <div class="col-md-10 offset-md-1">
+      <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <p>メールアドレス<br><%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "○○○○@example.com" %></p>
+        <div class="field">
+          <p>ユーザー名<br><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ニックネーム" %></p>
+        </div>
+
+        <div class="field">
+          <p>メールアドレス<br><%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "○○○○@example.com" %></p>
+        </div>
+
+        <div class="field">
+          <p>パスワード<br><%= f.password_field :password, autocomplete: "new-password", placeholder: "6文字以上" %></p>
+        </div>
+
+        <div class="field">
+          <p>パスワード(確認用)<br><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "新規登録" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <p>パスワード<br><%= f.password_field :password, autocomplete: "new-password", placeholder: "?文字以上" %></p>
-  </div>
-
-  <div class="field">
-    <p>パスワード(確認用)<br><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
