--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark mb-5 p-3" style="background-color: #FFFFFF; background-image: linear-gradient(-90deg, rgba(255, 204, 153, 0.5) 50%, transparent 50%),linear-gradient(rgba(153, 204, 204, 0.5) 50%, transparent 50%); background-size: 20px 20px;">
+      <nav class="navbar navbar-expand-lg navbar-dark mb-2 p-3" style="background-color: #FFFFFF; background-image: linear-gradient(-90deg, rgba(255, 204, 153, 0.5) 50%, transparent 50%),linear-gradient(rgba(153, 204, 204, 0.5) 50%, transparent 50%); background-size: 20px 20px;">
         <a class="navbar-brand" href="/" style="color: #000000;">ロゴ</a>
           <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
@@ -30,6 +30,17 @@
           </div>
       </nav>
     </header>
+    <div class="row">
+      <div class="col-md-10 offset-md-1 mb-2 text-center">
+        <% if user_signed_in? %>
+          <%= form_with url:search_path, method: :get, local: true do |f| %>
+            <%= f.select 'search[model]', options_for_select({ "投稿" => "post", "パーツ" => "part" }) %>
+            <%= f.text_field 'search[value]' %>
+            <%= f.submit :"検索" %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
 
     <main><%= yield %></main>
   </body>
