--- a/app/views/parts/narrowing.html.erb
+++ b/app/views/parts/narrowing.html.erb
@@ -15,19 +15,25 @@
 <h2><%= @part_tag.name %>タグのパーツ一覧</h2>
 <table>
   <% @parts.each do |part| %>
-    <tr>
-      <td><%= part.name%></td>
-      <td>
-        <% part.part_tags.each do |part_tag| %>
-          <%= link_to part_tag_parts_path(part_tag_id: part_tag.id) do %>
-          <span>
-            #<%= part_tag.name %>
-          </span>
+    <%= link_to part_path(part.id) do %>
+      <tr>
+        <td><%= part.name%></td>
+        <td>
+          <% part.part_tags.each do |part_tag| %>
+            <%= link_to part_tag_parts_path(part_tag_id: part_tag.id) do %>
+            <span>
+              #<%= part_tag.name %>
+            </span>
+            <% end %>
           <% end %>
-        <% end %>
-      </td>
-      <td>¥<%= part.price.to_s(:delimited) %></td>
-      <td><%= image_tag part.image, size: "100x100", :alt => "パーツ画像" %></td>
-    </tr>
+        </td>
+        <td>¥<%= part.price.to_s(:delimited) %></td>
+        <td>
+          <%= link_to part_path(part.id) do %>
+            <%= image_tag part.image, size: "100x100", :alt => "パーツ画像" %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
   <% end %>
 </table>
