[add] PC構成リスト投稿機能追加

--- a/app/views/draft_configurations/index.html.erb
+++ b/app/views/draft_configurations/index.html.erb
@@ -237,6 +237,7 @@
       <% end %>
     </tbody>
   </table>
+  <div><%= link_to "タイトル等の情報入力へ進む", new_pc_configuration_path, class: "btn btn-lg btn-success col-3 offset-4" %></div>
 <% else %>
 <h3>PC構成リストを作りましょう</h3>
 <% end %>
