--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
               <% if user_signed_in? %>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'マイページ', user_path(current_user.id), class: "", style: "text-decoration: none; color: black ;" %></li>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to '新規投稿', new_post_path, class: "", style: "text-decoration: none; color: black ;" %></li>
+                <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'PC構成リスト一覧', pc_configurations_path, class: "", style: "text-decoration: none; color: black ;" %></li>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'PC構成リスト作成', draft_configurations_path, class: "", style: "text-decoration: none; color: black ;" %></li>
                 <li class="nav-item mr-4 p-1 bg-light" style="width: 110px; text-align:center;"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "", style: "text-decoration: none; color: black ;" %></li>
               <% else %>
