--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,22 @@
 <% end %>
 <p>ユーザーネーム：<%= @post.user.name %></p>
 <p>投稿日時：<%= @post.created_at.to_s(:datetime_jp) %></p>
+<div id="post_<%= @post.id %>">
+  <p class="comments_count">コメント数:<%= @post.post_comments.count %></p>
+</div>
+<div id="favorites_<%= @post.id %>">
+  <%= render 'post_favorites/favorite', post: @post %>
+</div>
 <% if @post.user == current_user %>
   <%= link_to "投稿を編集する", edit_post_path(@post) %>
   <%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
 <% end %>
+
+<div>
+  <div id="comments_area">
+    <%= render 'post_comments/index', post: @post %>
+  </div>
+  <div class="comment_form">
+    <%= render 'post_comments/form', post: @post, post_comment: @post_comment %>
+  </div>
+</div>
