--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,35 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-10 offset-md-1">
-      <h2>新規ユーザー登録</h2>
+<div class="container bg-light user_sign-up">
+  <div class="row pt-3 user_sign-up">
+    <div class="col-md-10 offset-md-1 user_sign-up__title">
+      <h3 class="user_sign-up__title__content">新規ユーザー登録</h3>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-10 offset-md-1">
-      <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-
-        <div class="field">
-          <p>ユーザー名<br><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ニックネーム" %></p>
-        </div>
-
-        <div class="field">
-          <p>メールアドレス<br><%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "○○○○@example.com" %></p>
-        </div>
-
-        <div class="field">
-          <p>パスワード<br><%= f.password_field :password, autocomplete: "new-password", placeholder: "6文字以上" %></p>
-        </div>
-
-        <div class="field">
-          <p>パスワード(確認用)<br><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
-        </div>
-
-        <div class="actions">
-          <%= f.submit "新規登録" %>
-        </div>
-      <% end %>
-      <%= render "devise/shared/links" %>
-    </div>
+  <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
+  <div class="row user_sign-up__name-field">
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <p class="col-md-3 offset-md-2 user_sign-up__name-field__label">ユーザー名</p>
+    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__name-field__field"><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "ニックネーム", size: 30 %></div>
+  </div>
+  <div class="row user_sign-up__email-field">
+    <p class="col-md-3 offset-md-2 user_sign-up__email-field__label">メールアドレス</p>
+    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__email-field__field"><%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "○○○○@example.com", size: 30 %></div>
+  </div>
+  <div class="row user_sign-up__password-field">
+    <p class="col-md-3 offset-md-2 user_sign-up__password-field__label">パスワード</p>
+    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__password-field__field"><%= f.password_field :password, autocomplete: "new-password", placeholder: "6文字以上", size: 30 %></div>
+  </div>
+  <div class="row user_sign-up__confirm-field">
+    <p class="col-md-3 offset-md-2 user_sign-up__confirm-field__label">パスワード(確認用)</p>
+    <div class="col-md-5 offset-md-1 mb-4 user_sign-up__confirm-field__field"><%= f.password_field :password_confirmation, autocomplete: "new-password", size: 30 %></div>
+  </div>
+  <div class="row user_sign-up__actions">
+    <div class="col-md-5 offset-md-2 user_sign-up__actions__btn"><%= f.submit "新規ユーザー登録", class: "btn btn-success" %></div>
+  </div>
+  <% end %>
+  <div class="row mt-5 user_sign-up__link">
+    <p class="col-md-10 offset-md-2 user_sign-up__link__text">アカウント登録済みの方は、以下のボタンからログインしてください。</p>
+  </div>
+  <div class="row pb-3 user_sign-up__link">
+    <div class="col-md-3 offset-md-2 user_sign-up__link__btn"><%= render "devise/shared/links" %></div>
   </div>
 </div>
