[finish]ログイン画面のレイアウト調整実施

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark p-3" style="background-color: #00FFCC;">
-        <a class="navbar-brand" href="/" style="color: #000000; margin-left: 10%;">ロゴ</a>
+      <nav class="navbar navbar-expand-sm navbar-dark p-1" style="background-color: #B1F9D0;">
+        <a class="navbar-brand" href="/" style="margin-left: 10%;"><%= image_tag 'logo.png', :size =>'180x50' %></a>
           <div class="collapse navbar-collapse justify-content-end" style="margin-right: 10%;">
             <ul class="navbar-nav">
               <% if user_signed_in? %>
