--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,22 @@
-<h2>タグ一覧</h2>
-<% @post_tag_lists.each do |post_tag_list| %>
-  <% if post_tag_list.posts.count.zero? %>
-  <% else %>
-    <ul>
-      <li>
-        <%= link_to post_tag_posts_path(post_tag_id: post_tag_list.id) do %>
-          <%= post_tag_list.name %><%= post_tag_list.posts.count %>
-        <% end %>
-      </li>
-    </ul>
-  <% end %>
-<% end %>
-
-<h2>投稿一覧</h2>
-<% @posts.each do |post| %>
-  <div>
-    <%= link_to post_path(post.id) do %>
-      <%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "180x130" %>
-    <% end %>
-    <p>タイトル：<%= post.title %></p>
-    <p>説明：<%= post.body %></p>
-    <p>ユーザーネーム：<%= post.user.name %></p>
+<div class="container bg-light post-index">
+  <div class="row pt-3 post-index">
+    <div class="col-md-12 post-index">
+      <h2 class="post-index__title">投稿一覧</h2>
+    </div>
   </div>
-<% end %>
+  <div class="row pt-3 post-index">
+    <% @posts.each do |post| %>
+      <div class="d-flex flex-wrap post-index">
+        <%= link_to post_path(post.id) do %>
+        <div class="post-index__content-box p-2">
+          <div class="post-index__content-box__image"><%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "200x120" %></div>
+          <div class="text-dark post-index__content-box__title">タイトル：<%= post.title %></div>
+          <div class="small text-dark post-index__content-box__favorite">♥<%= post.post_favorites.count %>いいね</div>
+          <div class="small text-dark post-index__content-box__user-name">ユーザーネーム：<%= post.user.name %></div>
+          <div class="small text-dark post-index__content-box__created-at">投稿日時：<%= post.created_at.to_s(:datetime_jp) %></div>
+        </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
