--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,39 +1,45 @@
-<h2>投稿詳細</h2>
-<%= attachment_image_tag @post, :image, fallback: "no_image.jpg", size: "200x200" %>
-<p>タイトル：<%= @post.title %></p>
-<p>説明：<%= @post.body %></p>
-<% if @post_tags.present? %> <!--タグ付けの有無を判定して表示を切り替える-->
-  <p>タグ</p>
-  <% @post_tags.each do |post_tag| %>
-    <ul>
-      <li>
-        <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
-          <%= post_tag.name %><%= post_tag.posts.count %>
+<div class="container bg-light post-show">
+  <div class="row pt-3 post-show">
+    <div class="col-md-12 post-show">
+      <h3><%= @post.title %> の投稿詳細</h3>
+      <%= attachment_image_tag @post, :image, fallback: "no_image.jpg", size: "400x300" %>
+      <p>タイトル：<%= @post.title %></p>
+      <p>説明：<%= @post.body %></p>
+      <% if @post_tags.present? %> <!--タグ付けの有無を判定して表示を切り替える-->
+        <p>タグ</p>
+        <% @post_tags.each do |post_tag| %>
+          <ul>
+            <li>
+              <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
+                <%= post_tag.name %><%= post_tag.posts.count %>
+              <% end %>
+            </li>
+          </ul>
         <% end %>
-      </li>
-    </ul>
-  <% end %>
-<% else %>
-  <p>タグ付けされていません</p>
-<% end %>
-<p>ユーザーネーム：<%= @post.user.name %></p>
-<p>投稿日時：<%= @post.created_at.to_s(:datetime_jp) %></p>
-<div id="post_<%= @post.id %>">
-  <p class="comments_count">コメント数:<%= @post.post_comments.count %></p>
-</div>
-<div id="favorites_<%= @post.id %>">
-  <%= render 'post_favorites/favorite', post: @post %>
-</div>
-<% if @post.user == current_user %>
-  <%= link_to "投稿を編集する", edit_post_path(@post) %>
-  <%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-<% end %>
+      <% else %>
+        <p>タグ付けされていません</p>
+      <% end %>
+      <p>ユーザーネーム：<%= @post.user.name %></p>
+      <p>投稿日時：<%= @post.created_at.to_s(:datetime_jp) %></p>
+      <div id="post_<%= @post.id %>">
+        <p class="comments_count">コメント数:<%= @post.post_comments.count %></p>
+      </div>
+      <div id="favorites_<%= @post.id %>">
+        <%= render 'post_favorites/favorite', post: @post %>
+      </div>
+      <% if @post.user == current_user %>
+        <%= link_to "投稿を編集する", edit_post_path(@post) %>
+        <%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+      <% end %>
 
-<div>
-  <div id="comments_area">
-    <%= render 'post_comments/index', post: @post %>
-  </div>
-  <div class="comment_form">
-    <%= render 'post_comments/form', post: @post, post_comment: @post_comment %>
+      <div>
+        <div id="comments_area">
+          <%= render 'post_comments/index', post: @post %>
+        </div>
+        <div class="comment_form">
+          <%= render 'post_comments/form', post: @post, post_comment: @post_comment %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
