--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,16 @@
 <div class="container bg-light post-index">
   <div class="row pt-3 post-index">
     <div class="col-md-12 post-index">
-      <h2 class="post-index__title">投稿一覧</h2>
+      <h4 class="post-index__title">投稿一覧</h4>
     </div>
   </div>
-  <div class="row pt-3 post-index">
+  <div class="row pt-2 post-index">
     <% @posts.each do |post| %>
       <div class="d-flex flex-wrap post-index">
         <%= link_to post_path(post.id) do %>
         <div class="post-index__content-box p-2">
-          <div class="post-index__content-box__image"><%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "200x120" %></div>
-          <div class="text-dark post-index__content-box__title">タイトル：<%= post.title %></div>
+          <div class="post-index__content-box__image"><%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "280x140" %></div>
+          <div class="text-dark post-index__content-box__title"><%= post.title.truncate(20) %></div>
           <div class="small text-dark post-index__content-box__favorite">♥<%= post.post_favorites.count %>いいね</div>
           <div class="small text-dark post-index__content-box__user-name">ユーザーネーム：<%= post.user.name %></div>
           <div class="small text-dark post-index__content-box__created-at">投稿日時：<%= post.created_at.to_s(:datetime_jp) %></div>
