--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,44 +1,50 @@
 <div class="container bg-light post-show">
-  <div class="row pt-3 post-show">
-    <div class="col-md-12 post-show">
-      <h3><%= @post.title %> の投稿詳細</h3>
-      <%= attachment_image_tag @post, :image, fallback: "no_image.jpg", size: "400x300" %>
-      <p>タイトル：<%= @post.title %></p>
-      <p>説明：<%= @post.body %></p>
+  <div class="row pt-3 post-show__title">
+    <div class="col-md-12 post-show__title">
+      <h5 class="col-md-12 post-show__title__content"><%= @post.title.truncate(30) %> の投稿詳細</h5>
+    </div>
+  </div>
+  <div class="row pt-3 post-show__left">
+    <div class="col-md-7 post-show__left">
+      <div class="mb-2 post-show__left__image"><%= attachment_image_tag @post, :image, fallback: "no_image.jpg", width: '90%', height: '90%' %></div>
+      <div class="mb-2 post-show__left__title">タイトル：<%= @post.title %></div>
+      <div class="mb-2 post-show__left__body">説明：<%= @post.body %></div>
       <% if @post_tags.present? %> <!--タグ付けの有無を判定して表示を切り替える-->
-        <p>タグ</p>
+      <div class="post-show__left__tag--exists">関連タグ</div>
+      <div class="d-flex flex-row post-show__left__tag__name">
         <% @post_tags.each do |post_tag| %>
-          <ul>
-            <li>
-              <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
-                <%= post_tag.name %><%= post_tag.posts.count %>
-              <% end %>
-            </li>
-          </ul>
+          <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
+            <div class="mb-2 text-secondary pr-2 post-show__left__tag__name__link">#<%= post_tag.name %><%= post_tag.posts.count %></div>
+          <% end %>
         <% end %>
+      </div>
       <% else %>
-        <p>タグ付けされていません</p>
+      <div class="mb-2 post-show__left__tag--none">タグ付けされていません</div>
       <% end %>
-      <p>ユーザーネーム：<%= @post.user.name %></p>
-      <p>投稿日時：<%= @post.created_at.to_s(:datetime_jp) %></p>
-      <div id="post_<%= @post.id %>">
-        <p class="comments_count">コメント数:<%= @post.post_comments.count %></p>
-      </div>
-      <div id="favorites_<%= @post.id %>">
-        <%= render 'post_favorites/favorite', post: @post %>
-      </div>
       <% if @post.user == current_user %>
-        <%= link_to "投稿を編集する", edit_post_path(@post) %>
-        <%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+      <div class="d-flex flex-row post-show__left__action">
+        <div class="mb-2 mr-3 post-show__left__action__edit"><%= link_to "投稿を編集する", edit_post_path(@post), class: "btn btn-primary" %></div>
+        <div class="mb-2 post-show__left__action__delete"><%= link_to "投稿を削除する", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %></div>
+      </div>
       <% end %>
-
-      <div>
-        <div id="comments_area">
-          <%= render 'post_comments/index', post: @post %>
+    </div>
+    <div class="col-md-5 post-show__right">
+      <div class="post-show__right__user-name">ユーザーネーム：<%= @post.user.name %></div>
+      <div class="post-show__right__created-at">投稿日時：<%= @post.created_at.to_s(:datetime_jp) %></div>
+      <div class="d-flex flex-row mb-4 post-show__right__comment-favorite">
+        <div id="post_<%= @post.id %>">
+          <div class="mr-4 comments_count">コメント数：<%= @post.post_comments.count %></div>
         </div>
-        <div class="comment_form">
-          <%= render 'post_comments/form', post: @post, post_comment: @post_comment %>
+        <div class="post-show__right__favorite" id="favorites_<%= @post.id %>">
+          <%= render 'post_favorites/favorite', post: @post %>
         </div>
+      </div>
+      <div class="post-show__right__comment-index" id="comments_area">
+        <%= render 'post_comments/index', post: @post %>
+      </div>
+      <div class="post-show__right__comment-form">
+        <%= render 'post_comments/form', post: @post, post_comment: @post_comment %>
+      </div>
       </div>
     </div>
   </div>
