--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,47 @@
-<h2>マイページ</h2>
-<p><%= @user.name %></p>
-<div><%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg", size: "150x150" %></div>
-<p><%= @user.introduction %></p>
-<% if @user.id == current_user.id %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-<% end %>
-
-<h2>投稿一覧</h2>
-<% @posts.each do |post| %>
-<div>
-  <%= link_to post_path(post.id) do %>
-    <%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "180x130" %>
+<div class="container bg-light user-show">
+  <div class="row pt-3 user-show">
+    <div class="col-md-1 small user-show__profile-image">
+      <%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg", size: "40x40",style: "border-radius: 50%;" %>
+    </div>
+    <div class="col-md-3 small user-show__name">
+      <div>ユーザーネーム</div>
+      <div><%= @user.name %></div>
+    </div>
+    <div class="col-md-6 small user-show__introduction">
+      <div>自己紹介</div>
+      <div><%= @user.introduction %></div>
+    </div>
+    <% if @user.id == current_user.id %>
+    <div class="col-md-2 user-show__actions">
+      <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-sm btn-primary", style: "font-size: small;" %>
+    </div>
+    <% end %>
+  </div>
+  
+  <% if @user.id == current_user.id %>
+  <div class="row pt-3 user-show">
+    <div class="col-md-1 small user-show__profile-image">
+      <div>新規投稿</div>
+    </div>
+  </div>
   <% end %>
-  <p>タイトル：<%= post.title %></p>
-  <p>説明：<%= post.body %></p>
-  <p>ユーザーネーム：<%= post.user.name %></p>
+  
+  <div class="row pt-3 user-show__post">
+    <div class="col-md-6 user-show__post">
+      <h2>投稿一覧</h2>
+      <% @posts.each do |post| %>
+      <div>
+        <%= link_to post_path(post.id) do %>
+          <%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "180x130" %>
+        <% end %>
+        <p>タイトル：<%= post.title %></p>
+        <p>説明：<%= post.body %></p>
+        <p>ユーザーネーム：<%= post.user.name %></p>
+      </div>
+      <% end %>
+    </div>
+    <div class="col-md-6 user-show__post">
+      <div>PC構成リスト一覧</div>
+    </div>
+  </div>
 </div>
-<% end %>
