--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -25,7 +25,7 @@
     <div class="col-md-5 offset-md-1 post-edit__form__label"><%= f.text_field :names, value: @post_tags, size: 30 %></div>
   </div>
   <div class="row post-edit__form__actions">
-    <div class="col-md-5 offset-md-2 post-edit__form__actions__btn"><%= f.submit '変更を保存する', class: "btn btn-success" %></div>
+    <div class="col-md-5 offset-md-2 mt-3 post-edit__form__actions__btn"><%= f.submit '変更を保存する', class: "btn btn-success" %></div>
   </div>
   <% end %>
 </div>
