--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,27 @@
-<h2>プロフィール編集</h2>
-<%= form_with model:@user, local:true do |f| %>
-  <p>
-    ユーザー名<br>
-    <%= f.text_field :name, autofocus: true, placeholder:"ユーザー名"%>
-  </p>
-  <p>
-    プロフィール画像<br>
-    <%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg", size: "150x150"%><br>
-    <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-  </p>
-  <p>
-    自己紹介<br>
-    <%= f.text_area :introduction, autofocus: true, placeholder:"自己紹介文を書きましょう"%>
-  </p>
-  <%= f.submit "変更を保存" %>
-
-<% end %>
+<div class="container bg-light user-edit">
+  <div class="row pt-3 user-edit__title">
+    <div class="col-md-10 offset-md-1 user-edit__title">
+      <h3 class="user-edit__title">プロフィール編集</h3>
+    </div>
+  </div>
+  <%= form_with model:@user, local:true do |f| %>
+  <div class="row pt-3 user-edit__form">
+    <div class="col-md-3 offset-md-2 user-edit__form__label">タイトル</div>
+    <div class="col-md-5 offset-md-1 user-edit__form__field"><%= f.text_field :name, autofocus: true, placeholder:"ユーザー名", size: 30%></div>
+  </div>
+  <div class="row pt-3 user-edit__form">
+    <div class="col-md-3 offset-md-2 user-edit__form__label">プロフィール画像</div>
+    <div class="col-md-5 offset-md-1 user-edit__form__field"><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %></div>
+  </div>
+  <div class="row pt-3 user-edit__form">
+    <div class="col-md-5 offset-md-6 user-edit__form__image"><%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg", size: "80x80",style: "border-radius: 50%;"%></div>
+  </div>
+  <div class="row pt-3 user-edit__form">
+    <div class="col-md-3 offset-md-2 user-edit__form__label">自己紹介</div>
+    <div class="col-md-5 offset-md-1 user-edit__form__field"><%= f.text_area :introduction, autofocus: true, placeholder:"自己紹介文を書きましょう", rows:"3", cols:"30"%></div>
+  </div>
+  <div class="row user-edit__form__actions">
+    <div class="col-md-5 offset-md-2 mt-3 user-edit__form__actions__btn"><%= f.submit "変更を保存" %></div>
+  </div>
+  <% end %>
+</div>
