--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,28 +17,38 @@
     </div>
     <% end %>
   </div>
-  
   <% if @user.id == current_user.id %>
-  <div class="row pt-3 user-show">
-    <div class="col-md-1 small user-show__profile-image">
-      <div>新規投稿</div>
-    </div>
+  <div class="row pt-3 user-show__post-action">
+    <div class="col-md-4 offset-md-2 mb-2 user-show__post-action_new-btn--new-post"><%= link_to "新規投稿画面へ", new_post_path, class: "btn btn-info", style: "font-size: small;" %></div>
+    <div class="col-md-4 offset-md-1 mb-2 user-show__post-action_new-btn--new-configuration"><%= link_to "PC構成リスト作成画面へ", draft_configurations_path, class: "btn btn-info", style: "font-size: small;" %></div>
   </div>
   <% end %>
-  
+
   <div class="row pt-3 user-show__post">
     <div class="col-md-6 user-show__post">
-      <h2>投稿一覧</h2>
-      <% @posts.each do |post| %>
-      <div>
-        <%= link_to post_path(post.id) do %>
-          <%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "180x130" %>
-        <% end %>
-        <p>タイトル：<%= post.title %></p>
-        <p>説明：<%= post.body %></p>
-        <p>ユーザーネーム：<%= post.user.name %></p>
+      <div class="d-flex justify-content-center user-show__post__title">
+        <h4 class="user-show__post__title">投稿一覧</h4>
       </div>
-      <% end %>
+      <% @posts.each do |post| %>
+      <div class="d-flex justify-content-center user-show__post">
+        <%= link_to post_path(post.id) do %>
+        <div class="user-show__post__content-box p-3">
+          <div class="user-show__post__content-box__image"><%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "300x200" %></div>
+          <div class="text-dark user-show__post__content-box__title"><%= post.title.truncate(20) %></div>
+          <div class="small text-dark user-show__post__content-box__favorite">♥<%= post.post_favorites.count %>いいね</div>
+          <div class="small text-dark user-show__post__content-box__tag">
+            <% post.post_tags.each do |post_tag| %>
+              <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
+                <span class="text-secondary pr-2 user-show__post__content-box__tag__name">#<%= post_tag.name %></span>
+              <% end %>
+            <% end %>
+          </div>
+          <div class="small text-dark user-show__post__content-box__user-name">ユーザーネーム：<%= post.user.name %></div>
+          <div class="small text-dark user-show__post__content-box__created-at">投稿日時：<%= post.created_at.to_s(:datetime_jp) %></div>
+        </div>
+        <% end %>
+      </div>
+    <% end %>
     </div>
     <div class="col-md-6 user-show__post">
       <div>PC構成リスト一覧</div>
