--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,12 @@
       </nav>
     </header>
     <div class="row">
-      <div class="col-md-10 offset-md-1 text-center">
+      <div class="col-md-10 offset-md-1 mt-1 text-center">
         <% if user_signed_in? %>
           <%= form_with url:searchs_path, method: :get, local: true do |f| %>
             <%= f.select 'search[model]', options_for_select({ "投稿" => "post", "パーツ" => "part" }) %>
             <%= f.text_field 'search[value]' %>
-            <%= f.submit :"検索" %>
+            <%= f.submit :"検索", class: "btn btn-sm btn-info" %>
           <% end %>
         <% end %>
       </div>
