--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,25 +5,29 @@
     </div>
   </div>
   <div class="row pt-2 post-index">
-    <% @posts.each do |post| %>
-      <div class="d-flex flex-wrap post-index">
-        <%= link_to post_path(post.id) do %>
-        <div class="post-index__content-box p-3">
-          <div class="post-index__content-box__image"><%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "300x200" %></div>
-          <div class="text-dark post-index__content-box__title"><%= post.title.truncate(20) %></div>
-          <div class="small text-dark post-index__content-box__favorite">♥<%= post.post_favorites.count %>いいね</div>
-          <div class="small text-dark post-index__content-box__tag">
-            <% post.post_tags.each do |post_tag| %>
-              <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
-                <span class="text-secondary pr-2 post-index__content-box__tag__name">#<%= post_tag.name %></span>
-              <% end %>
+    <div class="post-index" style="display: flex; flex-wrap: wrap; justify-content: center;">
+      <% @posts.each do |post| %>
+      <%= link_to post_path(post.id) do %>
+      <div class="post-index__content-box p-3">
+        <div class="post-index__content-box__image"><%= attachment_image_tag post, :image, fallback: "no_image.jpg", size: "300x200" %></div>
+        <div class="text-dark post-index__content-box__title"><%= post.title.truncate(20) %></div>
+        <div class="small text-dark post-index__content-box__favorite">♥<%= post.post_favorites.count %>いいね</div>
+        <div class="small text-dark post-index__content-box__tag">
+          <% post.post_tags.each do |post_tag| %>
+            <%= link_to post_tag_posts_path(post_tag_id: post_tag.id) do %>
+              <span class="text-secondary pr-2 post-index__content-box__tag__name">#<%= post_tag.name %></span>
             <% end %>
-          </div>
-          <div class="small text-dark post-index__content-box__user-name">ユーザーネーム：<%= post.user.name %></div>
-          <div class="small text-dark post-index__content-box__created-at">投稿日時：<%= post.created_at.to_s(:datetime_jp) %></div>
+          <% end %>
         </div>
-        <% end %>
+        <div class="small post-index__content-box__user-name">
+          <%= link_to user_path(post.user.id) do %>
+            <div class="text-secondary post-index__content-box__user-name__link">ユーザーネーム：<%= post.user.name %></div>
+          <% end %>
+        </div>
+        <div class="small text-dark post-index__content-box__created-at">投稿日時：<%= post.created_at.to_s(:datetime_jp) %></div>
       </div>
-    <% end %>
+      <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
